style: 사용하지 않는 import 문 제거 및 접근 제어자 조정